# GOLDi-Services

./: BooleanExpressionParser.c  BooleanExpressionParser.h  CommandService.c  CommunicationService.c  ExpressionParsers.h  Makefile.am  ProgrammingService.c  ProtectionService.c  SensorsActuators.c  SensorsActuators.h  WebcamService.c  configure.ac  ipcsockets.c  ipcsockets.h  json.h  queue.h  sockets.c  sockets.h  spi.c  spi.h  stack.c  utils.c  websockets.c  websockets.h
src/: CommandService.c  CommunicationService.c  CommunicationServiceCU.c  CommunicationServicePS.c  InitializationService.c  Makefile.am  ProgrammingService.c  ProtectionService.c  WebcamService.c
src/controlunits/MicroController/: FPGA.svf
src/experiments/: ExperimentData3AxisPortal.json
src/experiments/3AxisPortal/: ExperimentData.json  FPGA.svf
src/interfaces/: SensorsActuators.c  SensorsActuators.h  ipcsockets.c  ipcsockets.h  spi.c  spi.h  websockets.c  websockets.h
src/logging/: log.h
src/parsers/: BooleanExpressionParser.c  BooleanExpressionParser.h  ExpressionParsers.h  MathematicalExpression.c  StateMachine.c  StateMachine.h  json.c
src/programmer/: avr-programmer.c  bcmGPIO.c  bcmGPIO.h  goldi-programmer.h  goldi-svf-player.c
src/systemd-files/: GOLDiCommandService.service  GOLDiCommandService.socket  GOLDiCommunicationService.service  GOLDiInitializationService.service  GOLDiInitializationService.socket  GOLDiProgrammingService.service  GOLDiProgrammingService.socket  GOLDiProtectionService.service  GOLDiProtectionService.socket  GOLDiWebcamService.service  GOLDiWebcamService.socket
src/templates/: DeviceDataCUTemplate.json  DeviceDataPSTemplate.json
src/utils/: queue.c  stack.c  stack.h  utils.c  utils.h
