bin_PROGRAMS = CommunicationService ProgrammingService WebcamService
CommunicationService_SOURCES = CommunicationService.c websockets.c websockets.h ipcsockets.c ipcsockets.h
CommunicationService_LDADD = -lwebsockets -lcjson -lsystemd -lpthread
CommunicationService_LDFLAGS = -g
ProgrammingService_SOURCES = ProgrammingService.c ipcsockets.c ipcsockets.h
ProgrammingService_LDADD = -lsystemd
ProgrammingService_LDFLAGS = -g
WebcamService_SOURCES = WebcamService.c websockets.c websockets.h ipcsockets.c ipcsockets.h
WebcamService_LDADD = -lwebsockets -lcjson -lsystemd -lpthread
WebcamService_LDFLAGS = -g