bin_PROGRAMS = CommunicationService ProgrammingService WebcamService ProtectionService CommunicationServiceCU CommunicationServicePS
CommunicationService_SOURCES = CommunicationService.c websockets.c websockets.h ipcsockets.c ipcsockets.h
CommunicationService_LDADD = -lwebsockets -lcjson -lsystemd -lpthread
CommunicationService_LDFLAGS = -g
ProgrammingService_SOURCES = ProgrammingService.c ipcsockets.c ipcsockets.h
ProgrammingService_LDADD = -lwebsockets -lcjson -lsystemd -lpthread
ProgrammingService_LDFLAGS = -g
WebcamService_SOURCES = WebcamService.c websockets.c websockets.h ipcsockets.c ipcsockets.h
WebcamService_LDADD = -lwebsockets -lcjson -lsystemd -lpthread
WebcamService_LDFLAGS = -g
ProtectionService_SOURCES = ProtectionService.c ipcsockets.c ipcsockets.h spi.h spi.c
ProtectionService_LDADD = -lsystemd -lpthread -lbcm2835
ProtectionService_LDFLAGS = -g
